--- a/Components/IconText/IconText.module.scss
+++ b/Components/IconText/IconText.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/theme/theme.scss";
+
 .container {
   display: flex;
   flex-direction: row;
@@ -9,4 +11,8 @@
 .icon {
   height: 2rem;
   margin-right: 1rem;
+}
+
+.text {
+  font-family: $text-font;
 }
