--- a/Components/IconText/IconText.module.scss
+++ b/Components/IconText/IconText.module.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 100px;
+  height: 20%;
 }
 
 .icon {
@@ -15,4 +15,8 @@
 
 .text {
   font-family: $text-font;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 3vw;
 }
