--- a/Components/PageSection/PageSection.module.scss
+++ b/Components/PageSection/PageSection.module.scss
@@ -3,7 +3,7 @@
 .section {
   display: flex;
   flex-direction: column;
-  margin: 25px 50px;
+  margin: 2.5% 5%;
   border-radius: 1rem;
   background-color: $card;
   box-shadow: 5px;
