--- a/Components/Post/Post.module.scss
+++ b/Components/Post/Post.module.scss
@@ -22,6 +22,7 @@
   text-overflow: ellipsis;
   text-transform: capitalize;
   font-family: $text-font;
+  font-size: min(4vw, 24px);
 }
 
 .body {
@@ -31,4 +32,5 @@
   text-overflow: ellipsis;
   text-transform: capitalize;
   font-family: $text-font;
+  font-size: max(3vw, 16px);
 }
