--- a/Components/IconText/IconText.module.scss
+++ b/Components/IconText/IconText.module.scss
@@ -13,10 +13,24 @@
   margin-right: 1rem;
 }
 
-.text {
-  font-family: $text-font;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 3vw;
-}
+
+
+@media only screen and (min-width: 768px) {
+  .text {
+    font-family: $text-font;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 20px;
+  }
+} 
+
+@media only screen and (max-width: 768px) {
+  .text {
+    font-family: $text-font;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 8px;
+  }
+} 
