--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -15,7 +15,16 @@
   background-color: $primary;
 }
 
-.header {
-  font-family: $text-font;
-  font-size: 4vw;
+@media only screen and (max-width: 768px) {
+  .header {
+    font-family: $text-font;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .header {
+    font-family: $text-font;
+    font-size: 24px;
+  }
 }
