--- a/pages/users/Users.module.scss
+++ b/pages/users/Users.module.scss
@@ -1,11 +1,28 @@
 @import "../../styles/theme/theme.scss";
 
-.header {
-    font-family: $text-font;
-    font-size: 4vw;
+
+@media only screen and (max-width: 768px) {
+    .header {
+        font-family: $text-font;
+        font-size: 12px;
+    }
+
+    .subheader {
+        font-family: $text-font;
+        color: $secondary;
+        font-size: 8px;
+    }
 }
 
-.subheader {
-    font-family: $text-font;
-    color: $secondary
+@media only screen and (min-width: 768px) {
+    .header {
+        font-family: $text-font;
+        font-size: 24px;
+    }
+
+    .subheader {
+        font-family: $text-font;
+        color: $secondary;
+        font-size: 20px;
+    }
 }
